# MRVN-Radiant

.claude/: settings.local.json
install/: oro_compiled_kernels.fatbin  oro_compiled_kernels.hipfb
install/gamepacks/ApexLegends.game/ApexLegends/: environment_entities.ent
install/gamepacks/ApexLegends.game/platform/: script_entities.ent
libs/: ddslib.h
libs/bcdec/: bcdec.h
libs/ddslib/: CMakeLists.txt  ddslib.c
libs/stream/: textfilestream.h  textstream.h
plugins/assmodel/: model.cpp
plugins/entity/: angles.h  miscmodel.cpp  targetable.h
plugins/mapq3/: parse.cpp
plugins/shaders/: shaders.cpp
radiant/: CMakeLists.txt  brush.h  brushtokens.h  build.cpp  build.h  camwindow.cpp  camwindow.h  colors.cpp  entity.cpp  entity.h  entityinspector.cpp  entitylist.cpp  entitypresetbrowser.cpp  entitypresetbrowser.h  image.cpp  mainframe.cpp  map.cpp  modelwindow.cpp  modelwindow.h  patch.cpp  patch.h  patchmanip.cpp  patchmanip.h  patchmodule.cpp  qe3.cpp  qe3.h  referencecache.cpp  renderer.h  renderstate.cpp  scenegraph.cpp  scenegraph.h  selection.cpp  selection.h  theme.cpp  tools.cpp  treemodel.cpp  treemodel.h  watchbsp.cpp  watchbsp.h  xywindow.cpp  (+1 more)
tools/remap/: CMakeLists.txt
tools/remap/source/: bspfile_shared.cpp  hiprt_trace.cpp  hiprt_trace.h  lump_names.h
tools/remap/source/apex_legends/: apex_legends.cpp  apex_legends.h  apex_legends_bsp.cpp  apex_legends_collisions.cpp  apex_legends_entities.cpp  apex_legends_lighting.cpp  apex_legends_lightmaps.cpp  apex_legends_meshes.cpp  apex_legends_misc.cpp  apex_legends_models.cpp  apex_legends_vis.cpp  apex_legends_visibility.cpp
tools/remap/source/titanfall/: titanfall_misc.cpp  titanfall_vis.cpp
